Pattern matching for instanceof (#242)